--- a/delivery5/package.json
+++ b/delivery5/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "main": "index.js",
@@ -47,6 +48,9 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.7",
@@ -56,6 +60,8 @@
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
+    "eslint": "^8.12.0",
+    "eslint-plugin-styled-components": "^0.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.12",
