--- a/delivery5/package.json
+++ b/delivery5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "delivery1",
+  "name": "delivery5",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-testing-library": "^8.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
