--- a/delivery6/reac-snap/package.json
+++ b/delivery6/reac-snap/package.json
@@ -11,6 +11,7 @@
     "list-react-files": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-testing-library": "^8.0.1",
@@ -30,7 +31,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "postbuild": "react-snap",
+    "serve": "serve -s build"
   },
   "reactSnap": {
     "inlineCss": true
