--- a/Redux/package.json
+++ b/Redux/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-snap": "^1.23.0",
     "react-testing-library": "^8.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
@@ -30,8 +31,10 @@
   ],
   "scripts": {
     "start": "webpack-dev-server --open --hot --mode development",
-    "build": "webpack --mode production",
+    "postbuild": "react-snap",
+    "buildWebpack": "webpack --mode production",
     "test": "react-scripts test",
+    "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
